service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-echo-service
  namespace: default
spec:
  selector:
    # matches with Deployment spec.selector.matchLabels
    app: node-echo
  ports:
    - port: 5000
      targetPort: 5000
