ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-echo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minikube.info
    http:
      paths:
      - path: /
        backend:
          # matches with Service metadata.name
          serviceName: node-echo-service
          servicePort: 5000
